--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/socialite": "^4.3",
         "laravel/tinker": "^1.0",
         "laravel/ui": "^1.1",
+        "spatie/laravel-cors": "^1.6",
         "tjgazel/laravel-toastr": "^1.0"
     },
     "require-dev": {
