--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "laravel/tinker": "^1.0",
         "laravel/ui": "^1.1",
         "spatie/laravel-cors": "^1.6",
-        "tjgazel/laravel-toastr": "^1.0"
+        "tjgazel/laravel-toastr": "^1.0",
+      "ext-json": "*"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
